site going live

--- a/config.toml
+++ b/config.toml
@@ -15,33 +15,38 @@ pygmentsCodeFences = true
 
 # Note: to disable a social network icon delete or comment out the corresponding line
 [author]
-    name = "Example"
-    github = "funkydan2"
+    name = "David Lim"
+    github = "niaahmaa"
     #gitlab = "username"
     #linkedin = "username"
-    #facebook = "username"
-    twitter = "ds_says"
-    #instagram = "username"
+    facebook = "inDclass"
+    #twitter = "ds_says"
+    instagram = "dl.eeee"
     #stackoverflow = "username"
     #youtube = "user/username" # or channel/channelname
 
 [params]
-    tagline = "A Hugo theme for creative and technical writing"
-    description = "Kiera: A Hugo theme for creative and technical writing."
+    #tagline = "A Hugo theme for creative and technical writing"
+    tagline = "Let's go Mario"
+    #description = "Kiera: A Hugo theme for creative and technical writing."
+    description = "What does this even do?"
     #images = [""] #This is used for opengraph/twitter cards.
+    images = ["pexels-photo-617278.jpg"] #This is used for opengraph/twitter cards.
     customCSS = []  #Optional Customised CSS
-    #favicon = ""
+    favicon = ""
 
 # uncomment to enable the Tags link on the main toolbar
-#  [[menu.main]]
-#    identifier = "tags"
-#    name = "Tags"
-#    url = "tags"
-#    weight = 1
+[[menu.main]]
+    identifier = "tags"
+    name = "Tags"
+    url = "tags"
+    weight = 1 #what's this do?
+    
+    #Issue: Tags link work as normal when accessed from homepage. However, it breaks when accessed from anywhere else. 
 
 # uncomment to enable the Categories link on the main toolbar
-#  [[menu.main]]
-#    identifier = "categories"
-#    name = "Categories"
-#    url = "categories"
-#    weight = 1
+[[menu.main]]
+    identifier = "categories"
+    name = "Categories"
+    url = "categories"
+    weight = 1
